// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayUtils batches should return a single batch when perChunk is bigger than len 1`] = `
Array [
  Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return an empty array when no data is given 1`] = `Array []`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 1`] = `
Array [
  Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
  ],
  Array [
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
  ],
  Array [
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  Array [
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
  ],
  Array [
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
  ],
  Array [
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  Array [
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
  ],
  Array [
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
  ],
  Array [
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
  ],
  Array [
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 2`] = `
Array [
  Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
    60,
    61,
    62,
    63,
    64,
    65,
    66,
    67,
    68,
    69,
    70,
    71,
    72,
    73,
    74,
    75,
    76,
    77,
    78,
    79,
    80,
    81,
    82,
    83,
    84,
    85,
    86,
    87,
    88,
    89,
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
    99,
  ],
]
`;

exports[`ArrayUtils batches should return matching elements grouped by batch number 3`] = `Array []`;

exports[`ArrayUtils groupBy should return matching elements grouped by sub-keys 1`] = `
Object {
  "blue": Array [
    Object {
      "color": "blue",
      "n": 1,
    },
    Object {
      "color": "blue",
      "n": 2,
    },
  ],
  "red": Array [
    Object {
      "color": "red",
      "n": 3,
    },
    Object {
      "color": "red",
      "n": 4,
    },
  ],
  "yellow": Array [
    Object {
      "color": "yellow",
      "n": 5,
    },
  ],
}
`;

exports[`ArrayUtils groupBy should return matching elements grouped by sub-keys 2`] = `
Object {
  "even": Array [
    Object {
      "color": "blue",
      "n": 2,
    },
    Object {
      "color": "red",
      "n": 4,
    },
  ],
  "odd": Array [
    Object {
      "color": "blue",
      "n": 1,
    },
    Object {
      "color": "red",
      "n": 3,
    },
    Object {
      "color": "yellow",
      "n": 5,
    },
  ],
}
`;
